--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
 		"@emotion/styled": "^11.8.1",
 		"@mui/icons-material": "^5.4.2",
 		"@mui/material": "^5.4.2",
+		"@reduxjs/toolkit": "^1.7.2",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-error-overlay": "^6.0.9",
 		"react-redux": "^7.2.6",
 		"react-router-dom": "^6.2.1",
 		"react-scripts": "^4.0.3",
+		"redux-thunk": "^2.4.1",
 		"web-vitals": "^1.1.2"
 	},
 	"devDependencies": {
