--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"@mui/icons-material": "^5.4.2",
 		"@mui/material": "^5.4.2",
 		"@reduxjs/toolkit": "^1.7.2",
+		"firebase": "^9.6.7",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-error-overlay": "^6.0.9",
