--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
 		"@mui/icons-material": "^5.4.2",
 		"@mui/material": "^5.4.2",
 		"@reduxjs/toolkit": "^1.7.2",
+		"@types/jest": "^27.4.1",
+		"@types/node": "^17.0.21",
+		"@types/react": "^17.0.39",
+		"@types/react-dom": "^17.0.11",
+		"@types/react-redux": "^7.1.23",
 		"firebase": "^9.6.7",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
@@ -16,6 +21,7 @@
 		"react-router-dom": "^6.2.1",
 		"react-scripts": "^4.0.3",
 		"redux-thunk": "^2.4.1",
+		"typescript": "^4.6.2",
 		"web-vitals": "^1.1.2"
 	},
 	"devDependencies": {
