--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"react-router-dom": "^6.2.1",
 		"react-scripts": "^4.0.3",
 		"redux-thunk": "^2.4.1",
+		"styled-components": "^5.3.3",
 		"typescript": "^4.6.2",
 		"web-vitals": "^1.1.2"
 	},
