--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "amazon-exe",
 	"version": "0.1.0",
+	"homepage": "https://Fialka-sh.github.io/amazon-mock",
 	"private": true,
 	"dependencies": {
 		"@emotion/react": "^11.8.1",
@@ -28,9 +29,12 @@
 	"devDependencies": {
 		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/react": "^11.2.7",
-		"@testing-library/user-event": "^12.8.3"
+		"@testing-library/user-event": "^12.8.3",
+		"gh-pages": "^3.2.3"
 	},
 	"scripts": {
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build",
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
